controllers/daemonset-controller.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: my-daemonset
spec:
  selector:
    matchLabels:
      app: daemonset1
  template:
    metadata:
      labels:
        app: daemonset1
    spec:
      containers:
      - name: nginx
        image: nginx
